add tg pics
